--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,15 @@ os:
     - osx
 
 before_install:
-    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get update -qq ; fi
-    - if [[ "$TRAVIS_OS_NAME" == "osx" ]];   then brew update             ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
+        sudo apt-get -qq update;
+        sudo apt-get -y install libssl-dev;
+    fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
+        brew update;
+        brew install openssl;
+        brew link openssl --force;
+    fi
 
 install:
     - wget "https://github.com/alfredh/pytools/raw/master/ccheck.py"
