--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,16 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
         brew update;
         brew install openssl;
-        brew link openssl --force;
     fi
 
 install:
     - wget "https://github.com/alfredh/pytools/raw/master/ccheck.py"
 
 script: 
-    - make EXTRA_CFLAGS=-Werror
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
+        make EXTRA_CFLAGS=-Werror;
+    fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
+        make EXTRA_CFLAGS="-I/usr/local/opt/openssl/include -Werror" EXTRA_LFLAGS="-L/usr/local/opt/openssl/lib";
+    fi
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then python2 ccheck.py ; fi
