travis: support only linux for now

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,12 @@
 language: c
 
-os:
-    - linux
-    - osx
-
 before_install:
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
-        sudo apt-get -qq update;
-        sudo apt-get -y install libssl-dev;
-    fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
-        brew update;
-        brew install openssl;
-    fi
+    - sudo apt-get -qq update
+    - sudo apt-get -y install libssl-dev
 
 install:
     - wget "https://github.com/alfredh/pytools/raw/master/ccheck.py"
 
 script: 
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
-        make EXTRA_CFLAGS=-Werror;
-    fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
-        make EXTRA_CFLAGS="-I/usr/local/opt/openssl/include -Werror" EXTRA_LFLAGS="-L/usr/local/opt/openssl/lib";
-    fi
-    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then python2 ccheck.py ; fi
+    - make EXTRA_CFLAGS=-Werror
+    - python2 ccheck.py
