--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,47 @@ compiler:
     - clang
     - gcc
 
+jobs:                                                                                                                                                                                         
+  include:
+      - os: linux
+        stage: ccheck
+        addons:
+          apt:
+            update: false
+        script:
+          - wget "https://raw.githubusercontent.com/baresip/baresip/master/test/ccheck.py"
+          - python3 ccheck.py
+      - name: OpenSSL 1.0.2g
+        os: linux
+        dist: xenial
+        stage: openssl
+      - name: OpenSSL 1.1.1f
+        os: linux
+        dist: focal
+        stage: openssl
+      - name: macOS 10.15.5
+        os: osx
+        osx_image: xcode12.0
+        stage: openssl
+      - name: LibreSSL
+        os: linux
+        dist: xenial
+        script:
+          - wget "https://github.com/baresip/ci/releases/download/v0.1/assets.tar.gz"
+          - tar -xf assets.tar.gz
+          - make EXTRA_CFLAGS="-Iassets/libressl/include -Werror" EXTRA_LFLAGS="-Lassets/libressl" CCACHE=;
+        stage: openssl
+
+
+stages:
+  - ccheck
+  - test
+  - openssl
+
 addons:
   apt:
     packages:
       libssl-dev
-
-install:
-  - wget "https://raw.githubusercontent.com/baresip/baresip/master/test/ccheck.py"
 
 script: 
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
@@ -23,4 +57,3 @@ script:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
         make EXTRA_CFLAGS="-I/usr/local/opt/openssl/include -Werror" EXTRA_LFLAGS="-L/usr/local/opt/openssl/lib" CCACHE=;
     fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then python3 ccheck.py ; fi
