.gitignore: added / prefix

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
-build*
-test
-test.c
-test.d
-test.o
-*stamp
-*.previous
-libre.a
-libre.dylib
-libre.pc
-libre.so
+/build*
+/test
+/test.c
+/test.d
+/test.o
+/*stamp
+/*.previous
+/libre.a
+/libre.dylib
+/libre.pc
+/libre.so
