--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: comm
 Priority: optional
 Maintainer: Alfred E. Heggestad <aeh@db.org>
 Standards-Version: 3.9.5
-Build-Depends: debhelper (>= 9.20120311)
+Build-Depends: debhelper-compat (= 12)
 Homepage: http://www.creytiv.com/
 
 Package: libre
